--- a/examples/index.html
+++ b/examples/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>NgxSherlockModule Tutorial</title>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+<head>
+    <title>NgxSherlockModule Tutorial</title>
 
-    <body>
-        <example-root>Loading...</example-root>
-    </body>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Cormorant"
+          rel="stylesheet">
+</head>
+
+<body>
+    <app-root>Loading...</app-root>
+</body>
+
 </html>
